--- a/form.html
+++ b/form.html
@@ -109,7 +109,7 @@ select{
     <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h3 class="animate-charcter">Registeration Form</h3>
+            <h3 class="animate-charcter">Trainee Form</h3>
           </div>
         </div>
       </div>
