--- a/js.html
+++ b/js.html
@@ -100,7 +100,36 @@ select{
 
 
 
-</style>  
+</style>
+
+<script type="text/javascript">
+
+    class login{
+        log(u,p) {
+
+        if (u == 'kartik' && p=='1234') {
+            
+            alert('Login successfull');
+        }
+        else{
+            alert('Login failed');
+        }
+
+        }
+
+    }
+    function registration(){
+        var uname = document.getElementById("t3").value;
+        var pwd = document.getElementById("t4").value;
+        var l=new login();
+        l.log(uname,pwd);
+    }
+
+    
+</script>
+
+
+
 </head>  
 <body>  
 <form>  
@@ -109,60 +138,20 @@ select{
     <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h3 class="animate-charcter">Registeration Form</h3>
+            <h3 style="margin-left:120px" class="animate-charcter">Login to your account</h3>
           </div>
         </div>
       </div>
 
-  <center>  <h1> </h1> </center>  
-  <hr>  
-  <label > <b>Firstname</b> </label>   
-<input type="text" name="firstname" placeholder= "Firstname" size="15" required />   
-<label> <b>Middlename:</b> </label>   
-<input type="text" name="middlename" placeholder="Middlename" size="15" required />   
-<label> <b>Lastname:</b> </label>    
-<input type="text" name="lastname" placeholder="Lastname" size="15"required />   
-<div>  
-<label>   
-<!-- Course :   -->
-</label>   
-  
-<select>  
-<option value="C">C</option>  
-<option value="C#">C#</option>  
-<option value="Java">Java</option>  
-<option value="python">python</option>  
-<option value="C++">C++</option>  
-<option value="Android">Android</option>  
-<option value="Flutter">Flutter</option>  
-</select>  
-</div>  
-<div>  
-<label>   
-<!-- Gender :   -->
-</label><br>  
-<input class="radio" type="radio" value="Male" name="gender" checked ><b> Male </b>  
-<input type="radio" value="Female" name="gender"><b> Female </b>  
-<input type="radio" value="Other" name="gender"><b> Other </b>  
-  
-</div>  
-<label>   
-<!-- //Phone :   -->
-</label>  
-<input type="text" name="country code" placeholder="Country Code"  value="+91" size="2"/>   
-<input type="text" name="phone" placeholder="phone no." size="10"/ required>   
-<!-- Current Address :   -->
-<textarea cols="80" rows="5" placeholder="Current Address" value="address" required>  
-</textarea>  
- <label for="email"><b>Email</b></label>  
- <input type="text" placeholder="Enter Email" name="email" required>  
-  
-    <label for="psw"><b>Password</b></label>  
-    <input type="password" placeholder="Enter Password" name="psw" required>  
-  
-    <label for="psw-repeat"><b>Re-type Password</b></label>  
-    <input type="password" placeholder="Retype Password" name="psw-repeat" required>  
-    <button type="submit" class="registerbtn">Register</button>    
-</form>  
+      <label style="font-size:30px;"> <b>Username:</b> </label>   
+      <input style="height:25px" type="text" placeholder="Enter Username here" id="t3" />   
+      <label style="font-size:30px;"> <b>Password:</b> </label>   
+        <input style="height:25px" type="password" placeholder="Enter Password here" id="t4" />
+
+        <input style="border-radius: 20px; width: 120px; height: 50px; font-size: 22px;background-color: #b92599;margin-left: 320px;" type="submit" value="Login" onclick="registration()" />
+</div>
+
+
+
 </body>  
-</html>  
+</html> 
