--- a/salary.html
+++ b/salary.html
@@ -141,7 +141,7 @@ select{
     <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h3 style="margin-left:120px" class="animate-charcter">Login to your account</h3>
+            <h3 style="margin-left:120px" class="animate-charcter">Know your Bonus</h3>
           </div>
         </div>
       </div> 
